--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         <h1>Etch a Sketch</h1>
         <p>Drag your mouse around the square below to draw</p>
     </div>
-    <div class="controls">
-        <button class="changeResolution">Change resolution</button>
-        <button class="clear">Clear screen</button>
-        
-    </div>
-    <div class="drawingBoard">
-
-    </div>
+    <div class = centerCluster>
+        <div class="controls">
+            <button class="changeResolution">Change resolution</button>
+            <button class="clear">Clear screen</button>
+        </div>
+        <div class="drawingBoard">
+            
+        </div>
+    <div\>
 </body>
 </html>
