--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="controls">
             <button class="changeResolution">Change resolution</button>
             <button class="clear">Clear screen</button>
+            <button class="changeColor">Change color</button>
         </div>
         <div class="drawingBoard">
             
